--- a/src/HomePage/Header/Header.css
+++ b/src/HomePage/Header/Header.css
@@ -5,14 +5,24 @@
         top: 0;
         width: 100%;
         z-index: 999;
+        color: #088F8F;
         background-color: transparent;
-        padding: 40px 0;
+      
       
     }
 
     .header.active{
         background-color: black;
-        color: white;
-        padding: 15px 0;
-    }
+        color: #088F8F;
   
+    }
+    
+    nav a{
+        text-decoration: none;
+        text-transform: uppercase;
+        margin-left: 25px;
+        color: #5F9EA0;
+    }
+  nav a:hover{
+      color: #088F8F;
+  }
