--- a/src/HomePage/GalleryAll/GalleryAll.css
+++ b/src/HomePage/GalleryAll/GalleryAll.css
@@ -1,4 +1,4 @@
-.all{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
+.gallery-details img{
+    width: 400px;
+    height: 350px;
 }
