--- a/src/HomePage/Banner/Banner.css
+++ b/src/HomePage/Banner/Banner.css
@@ -1,3 +1,6 @@
+
+
+
 .banner{
     position: relative;
     top: -130px;
@@ -6,4 +9,17 @@
 .banner img{
     width: 100%;
     height: 700px;
+}
+
+@media (max-width: 575.98px) { 
+
+    .banner{
+        
+        top: -200px;
+    }
+    .banner img{
+        width: 100%;
+        height: 550px;
+    }
+    
 }
