--- a/src/HomePage/Gallery/Gallery.css
+++ b/src/HomePage/Gallery/Gallery.css
@@ -4,3 +4,19 @@
     
 
 }
+h2{
+    margin-top: 10px;
+}
+
+@media (max-width: 575.98px) {
+    .g-picture{
+        margin-top: -180px;
+    }
+  
+    .gallery-data{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        
+    
+    }
+}
