--- a/src/Pages/Services/Services.css
+++ b/src/Pages/Services/Services.css
@@ -3,3 +3,10 @@
     grid-template-columns: repeat(3,1fr);
     gap: 20px;
 }
+@media (max-width: 575.98px){
+    .services{
+ 
+        grid-template-columns: repeat(1,1fr);
+        gap: 20px;
+    }
+}
